syntax = "proto3";

package storage;

option go_package = "godatabase/internal/rpc/proto";

// Storage service definition
service Storage {
  // Put stores a key-value pair
  rpc Put(PutRequest) returns (PutResponse) {}
  
  // Get retrieves a value for a key
  rpc Get(GetRequest) returns (GetResponse) {}
  
  // Delete removes a key-value pair
  rpc Delete(DeleteRequest) returns (DeleteResponse) {}
  
  // Stream operations for replication
  rpc StreamOperations(StreamRequest) returns (stream Operation) {}
}

// Put operation
message PutRequest {
  bytes key = 1;
  bytes value = 2;
}

message PutResponse {
  bool success = 1;
  string error = 2;
}

// Get operation
message GetRequest {
  bytes key = 1;
}

message GetResponse {
  bytes value = 1;
  bool found = 2;
  string error = 3;
}

// Delete operation
message DeleteRequest {
  bytes key = 1;
}

message DeleteResponse {
  bool success = 1;
  string error = 2;
}

// Stream operations
message StreamRequest {
  // Can be used for filtering or authentication
  string client_id = 1;
}

message Operation {
  enum Type {
    PUT = 0;
    DELETE = 1;
  }
  
  Type type = 1;
  bytes key = 2;
  bytes value = 3;
  int64 timestamp = 4;
} 